# rad-report-lint

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  PROJECT_STATE.md  README.md  REQUIREMENTS.md  SECURITY.md  STATUS.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DEMO_MEDIA.md
scripts/: generate_demo_media.py
src/rad_report_lint/: cli.py  engine.py  exporter.py  models.py  report_parser.py  synthetic.py
src/rad_report_lint/rules/: __init__.py  base.py  clarity.py  completeness.py  consistency.py  contradictions.py  placeholders.py
tests/: test_engine.py  test_exporter.py  test_models.py  test_report_parser.py  test_rules.py  test_synthetic.py
